Fixes #281 Template wrapping

--- a/templates/basic/css/webstore.css
+++ b/templates/basic/css/webstore.css
@@ -1411,7 +1411,7 @@ float:left;
 border:1px solid #cdcdcd;
 margin:0 0 30px 15px;
 padding:10px;
-width:717px;
+width:317px;
 }
 
 .border fieldset,fieldset {
